--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</head>
 	<body>
 		<h1>
-			<span class="icon"><i class="fa-solid fa-wand-sparkles"></i></span> Hello,
+			<i class="fa-solid fa-wand-sparkles"></i> Hello,
 			I'm Megan!
 		</h1>
 		<div class="container overflow-hidden">
@@ -117,13 +117,13 @@
 
 							<div class="database-intro">
 								<div class="row">
-									<div class="col-2">
-										<div class="wizard-icon">
+									<div class="col-sm-2">
+										<div class="icon">
 											<i class="fa-solid fa-hat-wizard fa-3x large-icon"></i>
 										</div>
 									</div>
 
-									<div class="col-10">
+									<div class="col-sm-10">
 										<div class="database-intro-text">
 											<p class="database-intro-line">Energy level: high</p>
 											<p class="database-intro-line">Energy level: high</p>
@@ -145,6 +145,9 @@
 							</div>
 						</div>
 						<div class="main-buttons">
+              <button class="kbc-button kbc-button-lg">
+								<i class="fa-solid fa-book"></i> Coursework
+							</button>
 							<button class="kbc-button kbc-button-lg">
 								<i class="fa-solid fa-file-word"></i> Resume
 							</button>
@@ -162,7 +165,7 @@
 						<div class="col-lg-8 section-container">
 							<div class="database-container">
 								<div class="database">
-									<h3>I'M CURRENTLY WORKING ON</h3>
+									<h3>CURRENTLY WORKING ON</h3>
 									<div class="separator"></div>
 
 									<div class="database-intro">
