--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</head>
 	<body>
 		<h1>
-			<i class="fa-solid fa-wand-sparkles"></i> Hello,
+			<i class="fa-solid fa-hand-sparkles fa-2x"></i> Hello,
 			I'm Megan!
 		</h1>
 		<div class="container overflow-hidden">
@@ -148,11 +148,11 @@
               <button class="kbc-button kbc-button-lg">
 								<i class="fa-solid fa-book"></i> Coursework
 							</button>
-							<button class="kbc-button kbc-button-lg">
-								<i class="fa-solid fa-file-word"></i> Resume
+              <button class="kbc-button kbc-button-lg">
+								<i class="fa-solid fa-robot"></i> Projects
 							</button>
 							<button class="kbc-button kbc-button-lg">
-								<i class="fa-solid fa-robot"></i> Projects
+								<i class="fa-solid fa-file-word"></i> Resume
 							</button>
 							<button class="kbc-button kbc-button-lg">
 								<i class="fa-solid fa-address-card"></i> Contact
