one more update...

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</head>
 	<body>
 		<h1>
-			<i class="fa-solid fa-hand-sparkles fa-2x"></i> Hello,
+			Hello,
 			I'm Megan!
 		</h1>
 		<div class="container overflow-hidden">
