last update today

--- a/index.html
+++ b/index.html
@@ -59,18 +59,30 @@
 						<div class="separator"></div>
 
 						<div class="contact-items">
-							<div class="contact-item">
+
+              <div class="contact-item">
 								<div class="small-icon">
-									<i class="fa-solid fa-envelope"></i>
-								</div>
-								menghanma@gmail.com
+									<i class="fa-solid fa-school-flag"></i></div>UBC MEng in Software Engineering
 							</div>
+
+              <div class="contact-item">
+								<div class="small-icon">
+									<i class="fa-solid fa-graduation-cap"></i></div>UBC BASc in Mechanical Engineering
+							</div>
+
 
 							<div class="contact-item">
 								<div class="small-icon">
 									<i class="fa-solid fa-mobile-screen-button"></i>
 								</div>
 								+1 (778) 683-2223
+							</div>
+
+							<div class="contact-item">
+								<div class="small-icon">
+									<i class="fa-solid fa-envelope"></i>
+								</div>
+								menghanma@gmail.com
 							</div>
 
 							<div class="contact-item">
@@ -125,38 +137,37 @@
 
 									<div class="col-sm-10">
 										<div class="database-intro-text">
-											<p class="database-intro-line">Energy level: high</p>
-											<p class="database-intro-line">Energy level: high</p>
-											<p class="database-intro-line">Energy level: high</p>
+											<p class="database-intro-line">Motivation: very high</p>
+											<p class="database-intro-line">Determination: very high</p>
+											<p class="database-intro-line">Energy: extremely high <i class="fa-solid fa-face-laugh-squint fa-xl"></i></p>
 										</div>
 									</div>
 								</div>
 
 								<div class="database-main">
 									<p>
-										Additional ramdon text: RandomAdditional ramdon text:
-										RandomAdditional ramdon text: RandomAdditional ramdon text:
-										RandomAdditional ramdon text: RandomAdditional ramdon text:
-										RandomAdditional ramdon text: RandomAdditional ramdon text:
-										RandomAdditional ramdon text: RandomAdditional ramdon text:
-										RandomAdditional ramdon text: Random
+										I am Menghan Ma, but feel free to call me Megan.
+                    Currently working hard to become a skilled full stack developer.
+                    <br>
+                    <br>
+                    Areas of interest: 
 									</p>
 								</div>
 							</div>
 						</div>
 						<div class="main-buttons">
-              <button class="kbc-button kbc-button-lg">
+              <a href="./pages/coursework.html" class="kbc-button kbc-button-lg">
 								<i class="fa-solid fa-book"></i> Coursework
-							</button>
-              <button class="kbc-button kbc-button-lg">
+							</a>
+              <a class="kbc-button kbc-button-lg">
 								<i class="fa-solid fa-robot"></i> Projects
-							</button>
-							<button class="kbc-button kbc-button-lg">
+							</a>
+							<a class="kbc-button kbc-button-lg">
 								<i class="fa-solid fa-file-word"></i> Resume
-							</button>
-							<button class="kbc-button kbc-button-lg">
+              </a>
+							<a class="kbc-button kbc-button-lg">
 								<i class="fa-solid fa-address-card"></i> Contact
-							</button>
+              </a>
 						</div>
 					</div>
 				</div>
@@ -170,15 +181,12 @@
 
 									<div class="database-intro">
 										<div class="database-main">
-											<p>
-												Additional ramdon text: RandomAdditional ramdon text:
-												RandomAdditional ramdon text: RandomAdditional ramdon
-												text: RandomAdditional ramdon text: RandomAdditional
-												ramdon text: RandomAdditional ramdon text:
-												RandomAdditional ramdon text: RandomAdditional ramdon
-												text: RandomAdditional ramdon text: RandomAdditional
-												ramdon text: Random
-											</p>
+											<ol type="I">
+                        <li>Interning at Texavie at Software Developer, mainly working on ios software development.</li>
+                        <li>Self learning front end web development.</li>
+                        <li>Trying to motivative myself to go to the gym...</li>
+                        <li>Watching <i>The Good Wife</i> but Alicia is about to betray Will <i class="fa-solid fa-face-sad-tear fa-xl"></i>. </li>
+                      </ol>
 										</div>
 									</div>
 								</div>
