--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 									<div class="database-intro">
 										<div class="database-main">
 											<ol type="I">
-                        <li>Interning at Texavie at Software Developer, mainly working on ios software development.</li>
+                        <li>Interning at Texavie as Software Developer, mainly working on ios software development.</li>
                         <li>Self learning front end web development.</li>
                         <li>Trying to motivative myself to go to the gym...</li>
                         <li>Watching <i>The Good Wife</i> but Alicia is about to betray Will <i class="fa-solid fa-face-sad-tear fa-xl"></i>. </li>
